@@ -408,6 +408,8 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 				else
 					deviceCommonInfo.setContextSource(false);
 				
+				logger.debug("About to install!");
+
 				String deviceId = getDeviceMngr().fireNewSharedDevice(deviceCommonInfo, deviceNodeId);
 				
 				if(deviceId == null){
@@ -432,13 +434,14 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 				logger.debug("Trying to do policy negotiation!");
 			
 			IIdentity providerNode = getCommMngr().getIdManager().fromJid(serviceToInstall.getServiceInstance().getFullJid());
-
+			INetworkNode myNode = getCommMngr().getIdManager().getThisNetworkNode();
+			
 			if(logger.isDebugEnabled())
 				logger.debug("Got the provider IIdentity, now creating the Requestor");
 		
 			RequestorService provider = new RequestorService(providerNode, serviceToInstall.getServiceIdentifier());
 			
-			/*
+			
 			ServiceNegotiationCallback negotiationCallback = new ServiceNegotiationCallback();
 			getPolicyNegotiation().startNegotiation(provider, negotiationCallback);
 			ServiceNegotiationResult negotiationResult = negotiationCallback.getResult();
@@ -459,19 +462,25 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 			
 			if(logger.isDebugEnabled())
 					logger.debug("Negotiation was successful! URI returned is: " + negotiationResult.getServiceUri());
-			*/
+			
 			// Now install the client!
 			if(serviceToInstall.getServiceType().equals(ServiceType.THIRD_PARTY_WEB)){
 				if(logger.isDebugEnabled()) logger.debug("This is a web-type service, no client to install!");
 				//serviceToInstall.setServiceEndpoint(negotiationResult.getServiceUri().toString());				
 
+				ServiceInstance si = serviceToInstall.getServiceInstance();
+				si.setParentIdentifier(serviceToInstall.getServiceIdentifier());
+				si.setParentJid(serviceToInstall.getServiceInstance().getFullJid());
+				si.setFullJid(myNode.getJid());
+				si.setCssJid(myNode.getBareJid());
+				serviceToInstall.setServiceInstance(si);
+				
 				List<Service> addServices = new ArrayList<Service>();
 				addServices.add(serviceToInstall);
 				getServiceReg().registerServiceList(addServices);
 
 				logger.info("Installed web-type third-party service.");
 				returnResult.setMessage(ResultMessage.SUCCESS);
-				
 			
 			} else{
 									
@@ -479,7 +488,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 					
 				Future<ServiceControlResult> asyncResult = null;
 				//URL bundleLocation = negotiationResult.getServiceUri().toURL();
-				URL bundleLocation = serviceToInstall.getServiceInstance().getServiceImpl().getServiceClient().toURL();
+				URL bundleLocation = new URL(serviceToInstall.getServiceInstance().getServiceImpl().getServiceClient());
 
 				asyncResult = installService(bundleLocation);
 				ServiceControlResult result = asyncResult.get();
@@ -499,6 +508,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 						
 					ServiceInstance newServiceInstance = newService.getServiceInstance();
 					newServiceInstance.setParentJid(serviceToInstall.getServiceInstance().getFullJid());
+					newServiceInstance.setParentIdentifier(serviceToInstall.getServiceIdentifier());
 					newService.setServiceInstance(newServiceInstance);
 					getServiceReg().updateRegisteredService(newService);
 						
@@ -520,6 +530,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 		
 		} catch (Exception ex) {
 			logger.error("Exception while attempting to install a bundle: " + ex.getMessage());
+			ex.printStackTrace();
 			throw new ServiceControlException("Exception while attempting to install a bundle.", ex);
 		}
 		
